objects/docebo_v3__LearningPlan__c.object
<CustomObject>
    <description>Represents Docebo&apos;s learning plans.</description>
    <fields>
        <fullName>docebo_v3__Catalog_Deeplink__c</fullName>
        <formula>IF(!ISBLANK(docebo_v3__Slug__c), &quot;?c__deeplink=/learn/learning_plan/view/&quot; + TEXT(docebo_v3__LearningPlanId__c) + &quot;/&quot; + docebo_v3__Slug__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Catalog_Deeplink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Code__c</fullName>
        <description>Learning plan code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Courses__c</fullName>
        <description>The number of Courses within this Larning Plan</description>
        <label>Courses</label>
        <summaryForeignKey>docebo_v3__LearningPlanCourse__c.docebo_v3__LearningPlan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>docebo_v3__CreationDate__c</fullName>
        <description>Learning plan craetion date in the LMS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Creation Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Deeplink__c</fullName>
        <formula>IF(!ISBLANK(docebo_v3__Slug__c), &quot;?c__deeplink=/learn/lp/&quot; + TEXT(docebo_v3__LearningPlanId__c) + &quot;/&quot; + docebo_v3__Slug__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deeplink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the learning plan has been deleted in the LMS</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>docebo_v3__DeletionDate__c</fullName>
        <description>Learning plan deletion date (only meaningful when &quot;Deleted&quot; field is set to true)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deletion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Description__c</fullName>
        <description>Learning plan description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Effective__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the learning plan is effectively belonging to current LMS courses selection</description>
        <label>Effective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>docebo_v3__LastUpdateDate__c</fullName>
        <description>Last update datetime</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__LearningPlanId__c</fullName>
        <description>Numeric ID of the learning plan in the LMS</description>
        <externalId>true</externalId>
        <label>Learning Plan Id</label>
        <precision>11</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>docebo_v3__Name__c</fullName>
        <description>Learning Plan name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Slug__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Slug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Thumbnail__c</fullName>
        <description>Learning plan thumbnail.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Thumbnail</label>
        <type>Url</type>
    </fields>
    <label>Learning Plan</label>
    <listViews>
        <fullName>docebo_v3__All</fullName>
        <columns>docebo_v3__LearningPlanId__c</columns>
        <columns>NAME</columns>
        <columns>docebo_v3__Name__c</columns>
        <columns>docebo_v3__Courses__c</columns>
        <columns>docebo_v3__Code__c</columns>
        <columns>docebo_v3__Deleted__c</columns>
        <columns>docebo_v3__DeletionDate__c</columns>
        <columns>docebo_v3__Effective__c</columns>
        <columns>docebo_v3__Deeplink__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Learning Plan Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>